--- a/src/components/Business/Business.css
+++ b/src/components/Business/Business.css
@@ -4,11 +4,24 @@
   justify-content: space-between;
   width: 16.66rem;
   margin: 0 .5rem 2.3rem .5rem;
+  padding: 10px;
+  border-radius: 10px;
+  /* border: 1px solid lightgray; */
+  box-shadow: 2px 2px 10px lightgray;
 }
 
 .Business .image-container {
   height: 16.66rem;
+  /* width: 16.66rem; */
   margin-bottom: 1rem;
+  display: grid;
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
+  margin: auto;
+  border-radius: 10px;
 }
 
 .Business h2 {
@@ -32,6 +45,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  text-align: left;
 }
 
 .Business-reviews {
